Update LevelManager.java